k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: python-app
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - image: pipelines-easymode/python-app:latest
          imagePullPolicy: Always
          name: python-app
          ports:
            - containerPort: 9000
              protocol: TCP
