k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: python-app
  name: python-app
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: python-app
