k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: python-app
  name: python-app
spec:
  port:
    targetPort: 5000
  to:
    kind: Service
    name: python-app
    weight: 100
  wildcardPolicy: None
